[gd_scene load_steps=5 format=3 uid="uid://17do5csli6m2"]

[ext_resource type="Script" uid="uid://cyk8crbmu2pwr" path="res://components/ProductDisplay.gd" id="1_nixoc"]
[ext_resource type="Texture2D" uid="uid://bgss3dyq8y1wx" path="res://components/ProductDisplayStar.tres" id="2_crg54"]
[ext_resource type="Theme" uid="uid://segr3l7pwr4u" path="res://themes/naked-info-label.tres" id="3_scono"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_scono"]

[node name="ProductDisplay" type="VBoxContainer"]
theme_override_constants/separation = 16
script = ExtResource("1_nixoc")

[node name="BaseIconBg" type="TextureRect" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_crg54")

[node name="BaseIcon" type="TextureRect" parent="BaseIconBg"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = SubResource("PlaceholderTexture2D_scono")

[node name="BaseLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_scono")
text = "BaseLabel"

[node name="Effects" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="EffectsDiscovered" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_scono")
text = "New effects discovered!"

[node name="IngredientList" type="HBoxContainer" parent="EffectsDiscovered"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
alignment = 1
